--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Astrophysics Website</title>
+    <title>Ahmed Shaban: PhD Candidate in Astrophysics</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>My Astrophysics Website</h1>
+      <h1>Ahmed Shaban: PhD Candidate in Astrophysics</h1>
       <nav>
         <ul>
           <li><a href="#research">Research</a></li>
@@ -42,7 +42,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 My Astrophysics Website</p>
+      <p>&copy; 2023 Ahmed Shaban</p>
     </footer>
   </body>
 </html>
